<resources>
    <string name="app_name">EmoCare</string>
    <string-array name="gender_array">
        <item>Pilih Gender</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emo_t">Emo-T</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="counseling">Counseling</string>
    <string name="account">Account</string>
    <string name="tes_kesehatan_jiwa_anda">Tes Kesehatan Jiwa Anda</string>
    <string name="tes_gangguan_kecemasan">Tes Gangguan Kecemasan</string>
    <string name="tes_untuk_mengecek_amp_mengukur_gejala_gangguan_kecemasan"><![CDATA[Tes untuk mengecek & mengukur gejala gangguan kecemasan]]></string>
    <string name="tes_depresi">Tes Depresi</string>
    <string name="tes_untuk_mengecek"><![CDATA[Tes untuk mengecek & mengukur gejala depresi]]></string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tes_gangguan_kecemasan_detail">Tes Gangguan Kecemasan</string>
    <string name="gangguan_kecemasan_adalah_kondisi_kesehatan_mental_yang_ditandai_oleh_perasaan_cemas_yang_berlebihan_tidak_terkendali_dan_persisten">Gangguan kecemasan adalah kondisi kesehatan mental yang ditandai oleh perasaan cemas yang berlebihan, tidak terkendali, dan persisten.</string>
    <string name="detail_jelas_gk">Ketahui lebih dalam tentang diri Anda! Tes gangguan kecemasan dapat membantu Anda memahami apakah perubahan kimia dalam otak, faktor keturunan, atau pengalaman traumatis memengaruhi kehidupan sehari-hari Anda.</string>
    <string name="mkatb">Merasa khawatir atau takut berlebih?</string>
    <string name="ambil_tes">Ambil Tes</string>
    <string name="depresi_adalah_gangguan_kesehatan_mental_yang_ditandai_oleh_perasaan_sedih_yang_mendalam_kehilangan_minat_atau_kesenangan_dalam_aktivitas_sehari_hari_dan_energi_yang_rendah">Depresi adalah gangguan kesehatan mental yang ditandai oleh perasaan sedih yang mendalam, kehilangan minat atau kesenangan dalam aktivitas sehari-hari, dan energi yang rendah</string>
    <string name="msambi">Merasa sedih atau murung belakangan ini?</string>
    <string name="detail_jelas_dpr">Jangan biarkan kegelapan merayap dalam kehidupan Anda. Tes depresi dapat memberikan wawasan tentang apa yang mungkin memengaruhi kesejahteraan mental Anda. Ambil kontrol, temukan jawaban!</string>
    <string name="back">baseline_arrow_back\n</string>
    <string name="doctor_image" />
    <string name="nama_dokter">Nama Dokter</string>
    <string name="_5_tahun">5 Tahun</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="dalam_2_minggu_terakhir">Dalam 2 minggu terakhir,</string>
    <string name="seberapa_sering_kamu_merasa_terganggu_oleh_hal_berikut">Seberapa sering kamu merasa terganggu oleh hal berikut...</string>
    <string-array name="data_questions">
        <item>Merasa gugup, cemas, atau gelisah?</item>
        <item>Tidak dapat menghentikan atau mengontrol kekhawatiran?</item>
        <item>Terlalu banyak mengkhawatirkan berbagai hal?</item>
        <item>Sulit merasa santai?</item>
        <item>Merasa kurang istirahat hingga sulit untuk diam?</item>
        <item>Mudah kesal atau marah?</item>
        <item>Merasa takut hal buruk akan terjadi?</item>
    </string-array>
    <string-array name="data_questions_dp">
        <item>Kurang senang atau tertarik dalam kegiatan sehari-hari?</item>
        <item>Merasa sedih, muram, dan putus asa?</item>
        <item>Sulit tidur atau tidur nyenyak; atau terlalu banyak tidur?</item>
        <item>Merasa lelah atau kekurangan energi?</item>
        <item>Tidak napsu makan, atau terlalu banyak makan?</item>
        <item>Merasa buruk tentang diri sendiri, atau merasa gagal atau mengecewakan diri atau keluargamu?</item>
        <item>Kesulitan berkonsentrasi, seperti saat membaca koran atau menonton TV?</item>
        <item>Bergerak atau berbicara dengan lambat hingga orang lain menyadarinya? Atau merasa kurang istirahat dan tidak bisa diam lebih dari biasanya?</item>
        <item>Merasa lebih baik mati, atau berpikir ingin menyakiti diri sendiri?</item>
    </string-array>
    <string name="profile_image_description">User profile picture</string>
    <string name="profile_name_default">Anonim</string>
    <string name="profile_phone_number">085894378743</string>
    <string name="manage_button_text">Kelola</string>
    <string name="transaction_history_button">Riwayat Transaksi</string>
    <string name="followers_count">Pengikut: 666</string>
    <string name="following_count">Mengikuti: 999</string>
</resources>