<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/explore" />
    <item
        android:id="@+id/emotFragment"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/emo_t" />
    <item
        android:id="@+id/counselingFragment"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/counseling" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/account" />
</menu>